==> whitecatboard/Lua-RTOS-ESP32/sys/drivers/platform/pic32mz/spi.c <==
#include "FreeRTOS.h"
#include "whitecat.h"
#include <sys/drivers/spi.h>
#include <sys/drivers/gpio.h>
#include <sys/syslog.h>
#include <machine/pic32mz.h>
#include <machine/endian.h>

void spi_bulk_write(int unit, unsigned int nbytes, unsigned char *data)
{
    unsigned i;


    int rup = mips_di();
    for (i=0; i<nbytes; i++) {
        spi_transfer(unit, *data++);
    }
    mtc0_Status(rup);
}

void spi_bulk_read(int unit, unsigned int nbytes, unsigned char *data)
{
    unsigned i;

    int rup = mips_di();
    for(i=0; i<nbytes; i++) {
        *data++ = spi_transfer(unit, 0xFF);
    }
    mtc0_Status(rup);
}

void spi_bulk_rw(int unit, unsigned int nbytes, unsigned char *data)
{
    unsigned int i;

    int rup = mips_di();
    for(i=0; i<nbytes; i++) {
        *data = spi_transfer(unit, *data);
        data++;
    }
    mtc0_Status(rup);
}

void spi_bulk_write16(int unit, unsigned int words, short *data)
{
    int channel = unit - 1;
    struct spi *dev = &spi[channel];

    struct spireg *reg = dev->reg;
    unsigned int nread = 0;
    unsigned int nwrite = words;

    int rup = mips_di();
    reg->conset = PIC32_SPICON_MODE16 | PIC32_SPICON_ENHBUF;
    while (nread < words) {
        if (nwrite > 0 && ! (reg->stat & PIC32_SPISTAT_SPITBF)) {
            reg->buf = *data++;
            nwrite--;
        }
        if (! (reg->stat & PIC32_SPISTAT_SPIRBE)) {
            (void) reg->buf;
            nread++;
        }
    }
    reg->con = dev->mode;
    mtc0_Status(rup);
}

void spi_bulk_write32(int unit, unsigned int words, int *data)
{
    int channel = unit - 1;
    struct spi *dev = &spi[channel];

    struct spireg *reg = dev->reg;
    unsigned int nread = 0;
    unsigned int nwrite = words;

    int rup = mips_di();
    reg->conset = PIC32_SPICON_MODE32 | PIC32_SPICON_ENHBUF;
    while (nread < words) {
        if (nwrite > 0 && ! (reg->stat & PIC32_SPISTAT_SPITBF)) {
            reg->buf = *data++;
            nwrite--;
        }
        if (! (reg->stat & PIC32_SPISTAT_SPIRBE)) {
            (void) reg->buf;
            nread++;
        }
    }
    reg->con = dev->mode;
    mtc0_Status(rup);
}

void spi_bulk_write32_be(int unit, unsigned int words, int *data)
{
    int channel = unit - 1;
    struct spi *dev = &spi[channel];

    struct spireg *reg = dev->reg;
    unsigned int nread = 0;
    unsigned int nwrite = words;

    int rup = mips_di();
    reg->conset = PIC32_SPICON_MODE32 | PIC32_SPICON_ENHBUF;
    while (nread < words) {
        if (nwrite > 0 && ! (reg->stat & PIC32_SPISTAT_SPITBF)) {
            reg->buf = __bswap32__(*data++);
            nwrite--;
        }
        if (! (reg->stat & PIC32_SPISTAT_SPIRBE)) {
            (void) reg->buf;
            nread++;
        }
    }
    reg->con = dev->mode;
    mtc0_Status(rup);
}

void spi_bulk_read32_be(int unit, unsigned int words, int *data)
{
    int channel = unit - 1;
    struct spi *dev = &spi[channel];

    struct spireg *reg = dev->reg;
    unsigned int nread = 0;
    unsigned int nwrite = words;

    int rup = mips_di();
    reg->conset = PIC32_SPICON_MODE32 | PIC32_SPICON_ENHBUF;
    while (nread < words) {
        if (nwrite > 0 && ! (reg->stat & PIC32_SPISTAT_SPITBF)) {
            reg->buf = ~0;
            nwrite--;
        }
        if (! (reg->stat & PIC32_SPISTAT_SPIRBE)) {
            *data++ = __bswap32__(reg->buf);
            nread++;
        }
    }
    reg->con = dev->mode;
    mtc0_Status(rup);
}

void spi_bulk_read16(int unit, unsigned int words, short *data)
{
    int channel = unit - 1;
    struct spi *dev = &spi[channel];

    struct spireg *reg = dev->reg;
    unsigned int nread = 0;
    unsigned int nwrite = words;

    int rup = mips_di();
    reg->conset = PIC32_SPICON_MODE16 | PIC32_SPICON_ENHBUF;
    while (nread < words) {
        if (nwrite > 0 && ! (reg->stat & PIC32_SPISTAT_SPITBF)) {
            reg->buf = ~0;
            nwrite--;
        }
        if (! (reg->stat & PIC32_SPISTAT_SPIRBE)) {
            *data++ = __bswap16__(reg->buf);
            nread++;
        }
    }
    reg->con = dev->mode;
    mtc0_Status(rup);
}

void spi_pins(int unit, unsigned char *sdi, unsigned char *sdo, unsigned char*sck) {
    int channel = unit - 1;

    switch (channel) {
        case 0:
            *sdi = SPI1_PINS >> 8 & 0xFF;
            *sdo = SPI1_PINS & 0xFF;
            break;
        case 1:
            *sdi = SPI2_PINS >> 8 & 0xFF;
            *sdo = SPI2_PINS & 0xFF;
            break;
        case 2:
            *sdi = SPI3_PINS >> 8 & 0xFF;
            *sdo = SPI3_PINS & 0xFF;
            break;
        case 3:
            *sdi = SPI4_PINS >> 8 & 0xFF;
            *sdo = SPI4_PINS & 0xFF;
            break;
    }

    static const int sck_tab[6] = {
        RP('D',1),  /* SCK1 */
        RP('G',6),  /* SCK2 */
        RP('B',14), /* SCK3 */
        RP('D',10), /* SCK4 */
        RP('F',13), /* SCK5 */
        RP('D',15), /* SCK6 */
    };   
    
    *sck = sck_tab[channel];
}
