==> whitecatboard/Lua-RTOS-ESP32/sys/drivers/platform/esp32/spi.c <==
#include "FreeRTOS.h"
#include "task.h"
#include <string.h>
#include <stdlib.h>
#include <stdio.h>
#include "soc/io_mux_reg.h"
#include "soc/spi_reg.h"
#include "soc/gpio_sig_map.h"
#include "soc/gpio_reg.h"
#include <sys/drivers/spi.h>
#include <sys/drivers/gpio.h>
#include <sys/drivers/cpu.h>
#include <sys/syslog.h>
#define ClkRegToFreq(reg) (CPU_CLK_FREQ / (((reg)->regPre + 1) * ((reg)->regN + 1)))

void spi_pins(int unit, unsigned char *sdi, unsigned char *sdo, unsigned char *sck, unsigned char* cs) {
    int channel = unit - 1;

    switch (channel) {
        case 0:
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_SD_DATA0_U, FUNC_SD_DATA0_SPIQ);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_SD_DATA1_U, FUNC_SD_DATA1_SPID);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_SD_CLK_U,   FUNC_SD_CLK_SPICLK);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_SD_CMD_U,   FUNC_SD_CMD_SPICS0);

            *sdi = GPIO7;
            *sdo = GPIO8;
            *sck = GPIO6;
            *cs =  GPIO11;
            break;

        case 1:
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTDI_U, FUNC_MTDI_HSPIQ);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTCK_U, FUNC_MTCK_HSPID);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTMS_U, FUNC_MTMS_HSPICLK);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTDO_U, FUNC_MTDO_HSPICS0);

            *sdi = GPIO12;
            *sdo = GPIO13;
            *sck = GPIO14;
            *cs =  GPIO15;

            break;

        case 2:
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO19_U,FUNC_GPIO19_VSPIQ);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO23_U,FUNC_GPIO23_VSPID);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO18_U,FUNC_GPIO18_VSPICLK);
            PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO5_U, FUNC_GPIO5_GPIO5_0);

            *sdi = GPIO19;
            *sdo = GPIO23;
            *sck = GPIO18;
            *cs =  GPIO5;
            break;
    }

    // Set the cs pin to the default cs pin for device
	spi_set_cspin(unit, *cs);
}

void spi_bulk_write(int unit, unsigned int nbytes, unsigned char *data) {
    taskDISABLE_INTERRUPTS();
    spi_master_op(unit, 1, nbytes, data, NULL);
    taskENABLE_INTERRUPTS();
}

void spi_bulk_read(int unit, unsigned int nbytes, unsigned char *data) {
    taskDISABLE_INTERRUPTS();
    spi_master_op(unit, 1, nbytes, NULL, data);
    taskENABLE_INTERRUPTS();
}

void spi_bulk_rw(int unit, unsigned int nbytes, unsigned char *data) {
	unsigned char *read = (unsigned char *)malloc(nbytes);
	if (read) {
	    taskDISABLE_INTERRUPTS();
	    spi_master_op(unit, 1, nbytes, data, read);
	    taskENABLE_INTERRUPTS();
	}

	memcpy(data, read, nbytes);
	free(read);
}

void spi_bulk_write16(int unit, unsigned int words, short *data) {
    taskDISABLE_INTERRUPTS();
    spi_master_op(unit, 2, words, (unsigned char *)data, NULL);
    taskENABLE_INTERRUPTS();
}

void spi_bulk_read16(int unit, unsigned int nbytes, short *data) {
    taskDISABLE_INTERRUPTS();
    spi_master_op(unit, 2, nbytes, NULL, (unsigned char *)data);
    taskENABLE_INTERRUPTS();
}

void spi_bulk_write32(int unit, unsigned int words, int *data) {
    taskDISABLE_INTERRUPTS();
    spi_master_op(unit, 4, words, (unsigned char *)data, NULL);
    taskENABLE_INTERRUPTS();
}

void spi_bulk_write32_be(int unit, unsigned int words, int *data) {
	int i = 0;

    taskDISABLE_INTERRUPTS();

    if (GET_PERI_REG_MASK(SPI_CTRL_REG(unit), (SPI_WR_BIT_ORDER | SPI_RD_BIT_ORDER))) {
        for(;i < words;i++) {
        	data[i] = __builtin_bswap32(data[i]);
        }
    }

    spi_master_op(unit, 4, words, (unsigned char *)data, NULL);

    taskENABLE_INTERRUPTS();
}

void spi_bulk_read32_be(int unit, unsigned int words, int *data) {
	int i = 0;

    taskDISABLE_INTERRUPTS();

    spi_master_op(unit, 4, words, NULL, (unsigned char *)data);

    if (GET_PERI_REG_MASK(SPI_CTRL_REG(unit), (SPI_WR_BIT_ORDER | SPI_RD_BIT_ORDER))) {
        for(;i < words;i++) {
        	data[i] = __builtin_bswap32(data[i]);
        }
    }

    taskENABLE_INTERRUPTS();
}
